crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[counter.sol:7:1]
   │
 7 │ ╭─▶ using {increment} for Counter global;
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
References and definitions: 
   ╭─[counter.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── name: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── name: 4
───╯
Definiens: 
   ╭─[counter.sol:1:1]
   │
 1 │   ╭─▶ struct Counter {
 2 │   │       uint value;
   │   │   ────────┬───────  
   │   │           ╰───────── definiens: 2
 3 │ │ ├─▶ }
   │ │ │       
   │ │ ╰─────── definiens: 1
 4 │ ╭───▶ 
 5 │ ├───▶ function increment(Counter memory _counter) public {}
   │ │                        ───────────┬───────────              
   │ │                                   ╰───────────────────────── definiens: 4
   │ │                                                             
   │ ╰───────────────────────────────────────────────────────────── definiens: 3
───╯
References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 5
   │            │     
   │            ╰───── ref: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 6
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── name: 7
   │                      │           │  
   │                      ╰────────────── refs: 5, 1
   │                                  │  
   │                                  ╰── name: 8
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 8
   │               │      
   │               ╰────── unresolved
───╯
Definiens: 
   ╭─[main.sol:1:1]
   │
 1 │ │     import {Counter} from "counter.sol";
   │ │             ───┬───  
   │ │                ╰───── definiens: 5
 2 │ ╭───▶ 
   ┆ ┆ ┆   
 4 │ │ ╭─▶     function test(Counter memory c) public {
   │ │ │                     ────────┬───────  
   │ │ │                             ╰───────── definiens: 8
   ┆ ┆ ┆   
 6 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 7
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 6
───╯
